--- a/.github/workflows/build-openwrt-with-lede.yml
+++ b/.github/workflows/build-openwrt-with-lede.yml
@@ -7,8 +7,8 @@
 name: Build OpenWrt with lede
 
 on:
-#  schedule:
-#    - cron: "21 19 * * 0"
+  schedule:
+    - cron: "21 19 * * 0"
   watch:
     types: started
   repository_dispatch:
