--- a/.github/workflows/build-openwrt-with-lede.yml
+++ b/.github/workflows/build-openwrt-with-lede.yml
@@ -170,7 +170,7 @@ jobs:
 
       - name: Build OpenWrt firmware
         if: steps.compile.outputs.status == 'success' && !cancelled()
-        uses: niliovo/OpenWrt-XQ2345@main
+        uses: niliowo/OpenWrt-XQ2345@main
         with:
           openwrt_path: openwrt/bin/targets/*/*/*rootfs.tar.gz
           openwrt_board: ${{ inputs.openwrt_board }}
